--- a/reference.html
+++ b/reference.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta neme="description" content="that is the support the Here where you are">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>😵‍💫Here where you are😵‍💫</title>
+    <title>🫧Chloe's world🫧</title>
 </head>
 <body>
     <header>
