change BG color

--- a/reference.html
+++ b/reference.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta neme="description" content="that is the support the Here where you are">
+    <meta neme="description" content="that is the support chloes world🫧">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🫧Chloe's world🫧</title>
+    <ㄴ<style type="text/css">
+        body {
+            background-color: #D1F2EB;
+        }
+        h1 {
+            color: #ed5566;
+            font-family: serif
+        }
+    </style>
 </head>
 <body>
     <header>
