make the border color

--- a/reference.html
+++ b/reference.html
@@ -5,7 +5,7 @@
     <meta neme="description" content="that is the support chloes world🫧">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🫧Chloe's world🫧</title>
-    <ㄴ<style type="text/css">
+         <style type="text/css">
         body {
             background-color: #D1F2EB;
         }
@@ -13,11 +13,11 @@
             color: #ed5566;
             font-family: serif
         }
-    </style>
+        </style>
 </head>
 <body>
     <header>
-    <h1>Chloe Sueun Choi 💻/heading 1</h1>
+    <h1 style="border:2px solid Tomato;">Chloe Sueun Choi 💻/heading 1</h1>
     <nav>
         <ol>
         <li><a href="#about">About me</a></li>
