chage the color on h2

--- a/reference.html
+++ b/reference.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-    <h1 style="border:2px solid Tomato;">Chloe Sueun Choi 💻/heading 1</h1>
+    <h1 style="border:3px solid Tomato;"> Chloe Sueun Choi 💻 / heading 1</h1>
     <nav>
         <ol>
         <li><a href="#about">About me</a></li>
@@ -29,8 +29,9 @@
 <main>
     <section>
         <a id="#about"></a>
-        <h2>About me /Subheading 1</h2>
-        <p>I am... what?</p>
+        <h2 style="background-color:powderblue;">About me /Subheading 1</h2>
+        <p>I am ... what?</p>
+        <p>I am ... Student!</p>
             <figure>
             <img src="Chloe.JPG" height="250" width="380" alt="Picture of my self"/>
             <figcaption> Chloe profile picture</figcaption>   
