what is <p> <br>

--- a/reference.html
+++ b/reference.html
@@ -30,7 +30,7 @@
     <section>
         <a id="#about"></a>
         <h2 style="background-color:powderblue;">About me /Subheading 1</h2>
-        <p>I am ... what?</p>
+        <p>I am ... what?</p><br>
         <p>I am ... Student!</p>
             <figure>
             <img src="Chloe.JPG" height="250" width="380" alt="Picture of my self"/>
