style="margin-top:45px;"

--- a/reference.html
+++ b/reference.html
@@ -30,8 +30,11 @@
     <section>
         <a id="#about"></a>
         <h2 style="background-color:powderblue;">About me /Subheading 1</h2>
-        <p>I am ... what?</p><br>
+        <p>I am ... what?</p> <br>
         <p>I am ... Student!</p>
+        <p>I am ... Front-end developler</p>
+        <p
+        style="margin-top:45px;"">I am ... Designer! and I dont know what I am gonnabe</p>
             <figure>
             <img src="Chloe.JPG" height="250" width="380" alt="Picture of my self"/>
             <figcaption> Chloe profile picture</figcaption>   
